--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-starter",
+  "name": "vite",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -7,7 +7,11 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "vue": "^3.2.25"
+  },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^2.2.0",
     "vite": "^2.8.0"
   }
 }
